<resources>
    <string name="app_name">First Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="weather_description">weather description</string>
    <string name="current_time">current time</string>
    <string name="current_date">current date</string>
    <string name="humidity">Humidity</string>
    <string name="city">city</string>
    <string name="temperature">temperature</string>
    <string name="hour">Hour</string>
    <string name="settings">Settings</string>
    <string name="temperature_units">Temperature</string>
    <string name="unit">Unit</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="language">language</string>
    <string name="wind_speed_unit">Wind speed units</string>
    <string name="place">Place</string>
    <string name="plus">+</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="use_your_location">Use your location</string>
    <string name="location">Location</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="open_map">Open Map</string>
    <string name="ok_button">OK</string>
    <string name="alarm_name">Alaram Name</string>
    <string name="alerts">Alerts</string>
    <string name="save">Save</string>
    <string name="press_long_click_to_save">press long click to save</string>
</resources>