<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SettingsFragment"
        android:background="@color/white">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/weeklyColor"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/settings">


        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textSize="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">
            <TextView
                android:id="@+id/use_your_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_your_location"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:textSize="16sp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_map"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:text="@string/open_map" />

        </RelativeLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/temp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/temperature_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_units"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/temp_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textColor="@color/black"/>

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <LinearLayout
            android:id="@+id/wind_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="false">
            <TextView
                android:id="@+id/wind_speed_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed_unit"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wind_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/lang_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/Language_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp" />
        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>



    </LinearLayout>
</layout>