<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="daily"
            type="com.example.firstdemo.data.remote.Daily" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/weeklyColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/dailt_weather_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight=".5"
                        android:scaleType="centerCrop"
                        app:icon="@{daily}"/>

                    <TextView
                        android:id="@+id/dailt_temperature_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/temperature"
                        app:dailyTemperature="@{daily}"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wind_speed"

                        android:textColor="@android:color/white"

                        />

                    <TextView
                        android:id="@+id/dailt_wind_speed_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        app:dailyWindSpeed="@{daily}"
                        android:textColor="@android:color/white"

                        />


                </LinearLayout>


                <TextView
                    android:id="@+id/daily_current_date_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/current_date"
                    app:dailyCurrentDateTime="@{daily}"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/dailt_weather_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    app:dailyWeatherDescription="@{daily}"
                    android:text="@string/weather_description"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/dailt_city_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/city"
                    android:textColor="@android:color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/humidity"
                        android:textColor="@android:color/white" />


                    <TextView
                        android:id="@+id/daily_humidity_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        app:dailyHumidity="@{daily}"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pressure"
                        android:textColor="@android:color/white"

                        />

                    <TextView
                        android:id="@+id/daily_pressure_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        app:dailyPressure="@{daily}"
                        android:textColor="@android:color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clouds"
                        android:textColor="@android:color/white"
                        />

                    <TextView
                        android:id="@+id/daily_clouds_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        app:dailyCloud="@{daily}"
                        android:textColor="@android:color/white"

                        />
                </LinearLayout>


            </LinearLayout>


            <!--    <View-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="2dp"-->
            <!--        android:background="@color/black"-->
            <!--        tools:ignore="MissingConstraints" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>